tests/transpiler/x/zig/cross_join_filter.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/cross_join_filter.zig:21:9: error: local variable is never mutated
    var tmp = arr.toOwnedSlice() catch unreachable;
        ^~~
/workspace/mochi/tests/transpiler/x/zig/cross_join_filter.zig:21:9: note: consider using 'const'
/workspace/mochi/tests/transpiler/x/zig/cross_join_filter.zig:16:17: error: remainder division with 'i64' and 'comptime_int': signed integers and floats must use @rem or @mod
            if (n % 2 == 0) {
                ^
referenced by:
    callMain [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:637:20
    posixCallMainAndExit: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
