tests/transpiler/x/zig/cross_join_filter.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:40 +0000
const std = @import("std");

const Entry = struct {
    n: i64,
    l: []const u8,
};

pub fn main() void {
    const nums = [_]i64{1, 2, 3};
    const letters = [_][]const u8{"A", "B"};
    const pairs: []Entry = blk: {
    var arr = std.ArrayList(Entry).init(std.heap.page_allocator);
    for (nums) |n| {
        for (letters) |l| {
            if (n % 2 == 0) {
                arr.append(.{ .n = n, .l = l }) catch unreachable;
            }
        }
    }
    var tmp = arr.toOwnedSlice() catch unreachable;
    break :blk tmp;
};
    try std.io.getStdOut().writer().print("{s}\n", .{"--- Even pairs ---"});
    for (pairs) |p| {
        try std.io.getStdOut().writer().print("{any} {any}\n", .{p.n, p.l});
    }
}
